clase_9: Agregado nuevo link para index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#">Internet</a></li>
                 <li><a href="#">Grandes Tecnologias</a></li>
                 <li><a href="#">Ultimas Noticias</a></li>
+                <li><a href="subscription.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
