--- a/subscription.html
+++ b/subscription.html
@@ -6,6 +6,7 @@
     <title>subscription</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -32,11 +33,11 @@
     <div class="wrap">
         <div class="formulario_contenedor">
             <h2>Formulario de Suscripción</h2>
-            <form id="subscriptionForm" novalidate>
+            <form id="subscription_formulario" novalidate>
                 <div class="formulario_grid">
                     <div class="formulario_grupo">
-                        <label for="fullName">Nombre Completo *</label>
-                        <input type="text" id="fullName" name="fullName" required>
+                        <label for="nombre_completo">Nombre Completo *</label>
+                        <input type="text" id="nombre_completo" name="nombre_completo" required>
                         <span class="error_mensaje">Debe tener más de 6 letras y al menos un espacio</span>
                     </div>
                     <div class="formulario_grupo">
@@ -50,33 +51,33 @@
                         <span class="error_mensaje">Al menos 8 caracteres con letras y números</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="confirmPassword">Repetir Contraseña *</label>
-                        <input type="password" id="confirmPassword" name="confirmPassword" required>
+                        <label for="confirma_password">Repetir Contraseña *</label>
+                        <input type="password" id="confirma_password" name="confirma_password" required>
                         <span class="error_mensaje">Las contraseñas no coinciden</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="age">Edad *</label>
-                        <input type="number" id="age" name="age" required>
+                        <label for="edad">Edad *</label>
+                        <input type="number" id="edad" name="edad" required>
                         <span class="error_mensaje">Debe ser mayor o igual a 18 años</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="phone">Teléfono *</label>
-                        <input type="tel" id="phone" name="phone" required>
+                        <label for="telefono">Teléfono *</label>
+                        <input type="tel" id="telefono" name="telefono" required>
                         <span class="error_mensaje">Mínimo 7 dígitos, solo números</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="address">Dirección *</label>
-                        <input type="text" id="address" name="address" required>
+                        <label for="direccion">Dirección *</label>
+                        <input type="text" id="direccion" name="direccion" required>
                         <span class="error_mensaje">Al menos 5 caracteres con letras, números y un espacio</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="city">Ciudad *</label>
-                        <input type="text" id="city" name="city" required>
+                        <label for="ciudad">Ciudad *</label>
+                        <input type="text" id="ciudad" name="ciudad" required>
                         <span class="error_mensaje">Al menos 3 caracteres</span>
                     </div>
                     <div class="formulario_grupo">
-                        <label for="postalCode">Código Postal *</label>
-                        <input type="text" id="postalCode" name="postalCode" required>
+                        <label for="codigo_postal">Código Postal *</label>
+                        <input type="text" id="codigo_postal" name="codigo_postal" required>
                         <span class="error_mensaje">Al menos 3 caracteres</span>
                     </div>
                     <div class="formulario_grupo">
