clase_10: Primer modificacion

--- a/subscription.html
+++ b/subscription.html
@@ -100,6 +100,14 @@
         <h1>© Ediciones EL PAÍS</h1>
         <p>EL PAÍS realiza una reserva expresa de las reproducciones y usos de las obras y otras prestaciones accesibles desde este sitio web a medios de lectura mecánica u otros medios que resulten adecuados a tal fin de conformidad con el artículo 67.3 del Real Decreto - ley 24/2021, de 2 de noviembre</p>
         <p>ContactoAviso legalPolítica cookiesConfiguración de cookiesPolítica de privacidadMapaSuscripciones EL PAÍS ArgentinaSuscripciones para empresasRSSNewslettersÍndice de temasNoticias de hoy</p>
-    </footer>    
+    </footer>
+    <div id="modal_resultado" class="modal">
+    <div class="modal_contenido">
+        <span class="modal_cerrar" onclick="cerrar_modal()">&times;</span>
+        <h2 id="modal_titulo"></h2>
+        <div id="modal_contenido"></div>
+        <button onclick="cerrar_modal()" class="modal_boton">Cerrar</button>
+    </div>
+</div>
 </body>
 </html>
